cloudnative/kubesphere/ks-console-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ks-console-svc-for-ingress
  namespace: kubesphere-system
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: ingress
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: ks-console
    tier: frontend
    version: v3.1.0
  sessionAffinity: None
  type: NodePort

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ks-console-ingress
  namespace: kubesphere-system
  annotations:
    kubernetes.io/ingress.class: apisix
spec:
  rules:
    - host: kubesphere.wjjzst.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: ks-console-svc-for-ingress
              servicePort: 80
